--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
         "allowJs": true,
         "jsx": "react-jsx",
         "moduleResolution": "node",
+        "rootDir": ".",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -17,8 +18,8 @@
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
         "skipLibCheck": true,
-        "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "strict": true,
         "noFallthroughCasesInSwitch": true,
         "resolveJsonModule": true,
@@ -32,7 +33,8 @@
         "acceptance-tests",
         "webpack",
         "jest",
-        "src/setupTests.ts"
+        "src/setupTests.ts",
+        "ecosystem.config.js"
     ],
-    "include": ["src"]
+    "include": ["src", "helper_scripts"]
 }
