--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "react": "^17.0.1",
+        "react-canvas-draw": "^1.1.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
@@ -40,6 +41,7 @@
     "devDependencies": {
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
+        "@types/react-canvas-draw": "^1.1.0",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.7",
         "chalk": "^4.1.0",
