--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "scribble-frontend",
     "version": "0.1.0",
     "private": true,
+    "license": "MIT",
     "dependencies": {
         "react": "^17.0.1",
         "react-canvas-draw": "^1.1.1",
@@ -9,6 +10,8 @@
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.3",
         "socket.io-client": "^3.1.2",
         "web-vitals": "^0.2.4"
     },
@@ -17,14 +20,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "serve": "pm2 start",
-        "build-and-serve": "yarn build && yarn serve",
         "create:page": "node ./helper_scripts/CL_commands/create_page.js",
-        "create:component": "node ./helper_scripts/CL_commands/create_component.js",
-        "clean-cache": "rimraf -rf ./node_modules/.cache"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
+        "create:component": "node ./helper_scripts/CL_commands/create_component.js"
     },
     "browserslist": {
         "production": [
@@ -46,13 +43,11 @@
         "@types/react-router-dom": "^5.1.7",
         "chalk": "^4.1.0",
         "eslint": "^7.20.0",
+        "eslint-config-react-app": "^6.0.0",
         "eslint-plugin-react": "^7.22.0",
         "figlet": "^1.5.0",
         "handlebars": "^4.7.7",
         "inquirer": "^7.3.3",
-        "moment": "^2.29.1",
-        "replace-in-file": "^6.2.0",
-        "rimraf": "^3.0.2",
         "sass": "^1.32.5",
         "typescript": "^4.0.3"
     }
