--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,30 +1,24 @@
 {
-    "short_name": "Scribblio",
-    "name": "Scribblio",
+    "short_name": "Scribble",
+    "name": "Scribble",
     "icons": [
         {
             "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         },
         {
-            "src": "logo192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "logo512.png",
-            "type": "image/png",
-            "sizes": "512x512"
-        },
-        {
-            "src": "/android-chrome-192x192.png",
-            "sizes": "192x192",
+            "src": "favicon-16x16.png",
+            "sizes": "16x16",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-512x512.png",
-            "sizes": "512x512",
+            "src": "favicon-32x32.png",
+            "sizes": "32x32",
+            "type": "image/png"
+        },
+        {
+            "src": "apple-touch-icon.png",
+            "sizes": "192x192",
             "type": "image/png"
         }
     ],
