--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,7 +4,11 @@
         "outDir": "build",
         "module": "esnext",
         "target": "es5",
-        "lib": ["es6", "dom", "esnext.asynciterable"],
+        "lib": [
+            "es6",
+            "dom",
+            "esnext.asynciterable"
+        ],
         "sourceMap": true,
         "allowJs": true,
         "jsx": "react-jsx",
@@ -13,10 +17,8 @@
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "noImplicitAny": true,
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": true,
-        "noUnusedLocals": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
@@ -36,5 +38,7 @@
         "src/setupTests.ts",
         "ecosystem.config.js"
     ],
-    "include": ["src", "helper_scripts"]
+    "include": [
+        "src"
+    ]
 }
