--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "license": "MIT",
     "dependencies": {
+        "@brainhubeu/react-carousel": "^1.19.26",
         "react": "^17.0.1",
         "react-canvas-draw": "^1.1.1",
         "react-dom": "^17.0.1",
@@ -36,6 +37,7 @@
         ]
     },
     "devDependencies": {
+        "@types/brainhubeu__react-carousel": "^2.0.2",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-canvas-draw": "^1.1.0",
