--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
     "private": true,
     "license": "MIT",
     "dependencies": {
-        "@brainhubeu/react-carousel": "^1.19.26",
+        "rc-slider": "^9.7.1",
         "react": "^17.0.1",
         "react-canvas-draw": "^1.1.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
+        "react-responsive-carousel": "^3.2.15",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "semantic-ui-css": "^2.4.1",
@@ -37,16 +38,22 @@
         ]
     },
     "devDependencies": {
-        "@types/brainhubeu__react-carousel": "^2.0.2",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-canvas-draw": "^1.1.0",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
+        "babel-eslint": "^10.1.0",
         "chalk": "^4.1.0",
         "eslint": "^7.20.0",
         "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-flowtype": "^5.4.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "figlet": "^1.5.0",
         "handlebars": "^4.7.7",
         "inquirer": "^7.3.3",
