--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,18 @@
     "private": true,
     "license": "MIT",
     "dependencies": {
-        "rc-slider": "^9.7.1",
+        "rc-slider": "^9.7.2",
         "react": "^17.0.1",
         "react-canvas-draw": "^1.1.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
-        "react-responsive-carousel": "^3.2.15",
+        "react-responsive-carousel": "3.2.11",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
-        "socket.io-client": "^3.1.2",
-        "web-vitals": "^0.2.4"
+        "socket.io-client": "^4.0.0",
+        "web-vitals": "^1.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -38,16 +38,16 @@
         ]
     },
     "devDependencies": {
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.53",
+        "@types/node": "^14.14.37",
+        "@types/react": "^17.0.3",
         "@types/react-canvas-draw": "^1.1.0",
-        "@types/react-dom": "^16.9.8",
+        "@types/react-dom": "^17.0.3",
         "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
+        "@typescript-eslint/eslint-plugin": "^4.20.0",
+        "@typescript-eslint/parser": "^4.20.0",
         "babel-eslint": "^10.1.0",
         "chalk": "^4.1.0",
-        "eslint": "^7.20.0",
+        "eslint": "^7.23.0",
         "eslint-config-react-app": "^6.0.0",
         "eslint-plugin-flowtype": "^5.4.0",
         "eslint-plugin-import": "^2.22.1",
@@ -56,7 +56,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "figlet": "^1.5.0",
         "handlebars": "^4.7.7",
-        "inquirer": "^7.3.3",
+        "inquirer": "^8.0.0",
         "sass": "^1.32.5",
         "typescript": "^4.0.3"
     }
