--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -8,7 +8,7 @@
   "semi": false,
   "overrides": [
     {
-      "files": "*.json",
+      "files": ["*.json", "*rc", "*.yml"],
       "options": {
         "tabWidth": 2
       }
