--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,11 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.5</version>
+		</dependency>
 
 	</dependencies>
 
