--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,35 +1,25 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
 # testing
-/coverage
-
-# next.js
-/.next/
-/out/
+coverage
+test-results
 
 # production
-/build
+build
+dist
 
 # misc
 .DS_Store
-*.pem
+.vscode
+.idea
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# vercel
-.vercel
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
