--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,68 @@
 {
-  "name": "scribble-frontend",
-  "version": "0.5.0",
-  "author": "Victor Gorchilov <victor@gorchilov.com>",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "license": "MIT",
-  "scripts": {
-    "start": "next start",
-    "dev": "next dev",
-    "build": "next build",
-    "type-check": "tsc",
-    "format": "prettier -w ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format"
-    }
-  },
   "dependencies": {
-    "next": "latest",
     "rc-slider": "^9.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-responsive-carousel": "3.2.11",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "socket.io-client": "^4.0.0"
+    "socket.io-client": "^4.0.1",
+    "web-vitals": "^1.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "husky": {
+    "pre-commit": "prettier -w ."
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.2",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
     "@types/react-canvas-draw": "^1.1.0",
-    "@types/react-dom": "^17.0.1",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.1.0",
+    "chalk": "^4.1.0",
+    "eslint": "7.21.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "figlet": "^1.5.0",
+    "handlebars": "^4.7.7",
     "husky": "^6.0.0",
+    "inquirer": "^8.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "typescript": "4.2.3"
+    "rimraf": "^3.0.2",
+    "sass": "^1.32.5",
+    "typescript": "^4.0.3"
   }
 }
