[up] remove express backend, fix java db connection

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,7 +1,7 @@
-spring.datasource.database=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/${spring.datasource.database}
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true # disable in prod
+PORT=
+
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASS=
