--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     restart: always
     container_name: scribble-postgres
     ports:
-      - '5432:5432'
+      - '${DB_PORT}:5432'
     environment:
-      POSTGRES_PASSWORD: ${spring.datasource.password}
-      POSTGRES_USER: ${spring.datasource.username}
-      POSTGRES_DB: ${spring.datasource.database}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - data:/var/lib/postgresql/data/pgdata
