--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-server.port=5000
+server.port=${PORT}
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username = ${DB_USER}
+spring.datasource.password = ${DB_PASS}
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+logging.level.org.springframework.boot.autoconfigure.logging=INFO
