--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "create:component": "node ./helper_scripts/commands/create_component.js",
     "create:page": "node ./helper_scripts/commands/create_page.js",
     "serve": "NODE_ENV=production node dist/index.js",
-    "dev": "node dev.js",
+    "dev": "nodemon dev.js",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "type-check": "tsc --pretty --noEmit"
@@ -27,6 +27,13 @@
       "yarn format"
     ]
   },
+  "nodemonConfig": {
+    "watch": [
+      "server/"
+    ],
+    "ext": "js,json,ts",
+    "delay": 2500
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -40,7 +47,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -50,6 +58,7 @@
     "@types/react": "^17.0.3",
     "@types/react-canvas-draw": "^1.1.0",
     "@types/react-dom": "^17.0.3",
+    "@types/uuid": "^8.3.0",
     "@types/whatwg-url": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
