--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "delay": 2500
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "next": "^10.1.2",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.18",
@@ -57,9 +59,9 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-canvas-draw": "^1.1.0",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.3",
     "@types/uuid": "^8.3.0",
-    "@types/whatwg-url": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
