--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "next": "^10.1.2",
+    "next-auth": "^3.17.2",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
