--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "delay": 2500
   },
   "dependencies": {
+    "@prisma/client": "^2.21.2",
     "axios": "^0.21.1",
+    "cypress": "^7.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "next": "^10.1.2",
@@ -74,6 +76,7 @@
     "inquirer": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "prisma": "^2.21.2",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   }
