--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "yarn build:server && yarn build:next",
+    "build": "rimraf build && yarn build:server && yarn build:next",
     "build:next": "next build",
     "build:server": "tsc --project tsconfig.server.json",
     "create:component": "node ./helper_scripts/commands/create_component.js",
@@ -77,6 +77,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "prisma": "^2.21.2",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   }
