--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "tsc --project tsconfig.server.json",
     "create:component": "node ./helper_scripts/commands/create_component.js",
     "create:page": "node ./helper_scripts/commands/create_page.js",
-    "dev": "nodemon dev.js",
+    "dev": "nodemon .",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "start": "NODE_ENV=production node build/index.js",
@@ -31,54 +31,55 @@
     "watch": [
       "server/"
     ],
+    "exec": "ts-node --project tsconfig.server.json server/index.ts",
     "ext": "js,json,ts",
     "delay": 2500
   },
   "dependencies": {
-    "@prisma/client": "^2.21.2",
-    "axios": "^0.21.1",
-    "cypress": "^7.1.0",
-    "dotenv": "^8.2.0",
+    "@prisma/client": "^3.4.2",
+    "axios": "^0.24.0",
+    "cypress": "^9.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "next": "^10.1.2",
-    "next-auth": "^3.17.2",
-    "rc-slider": "^9.7.2",
+    "next": "^12.0.3",
+    "prisma": "^3.4.2",
+    "rc-slider": "^9.7.4",
     "react": "^17.0.2",
-    "react-canvas-draw": "^1.1.1",
-    "react-copy-to-clipboard": "^5.0.3",
+    "react-canvas-draw": "^1.2.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-responsive-carousel": "3.2.11",
-    "react-toastify": "^7.0.4",
+    "react-toastify": "^8.1.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
-    "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1",
+    "semantic-ui-react": "^2.0.4",
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/register": "^7.13.16",
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-canvas-draw": "^1.1.0",
-    "@types/react-copy-to-clipboard": "^5.0.0",
-    "@types/react-dom": "^17.0.3",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "eslint": "^7.23.0",
+    "@babel/core": "^7.16.0",
+    "@babel/register": "^7.16.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-canvas-draw": "^1.1.1",
+    "@types/react-copy-to-clipboard": "^5.0.2",
+    "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.27.0",
     "handlebars": "^4.7.7",
-    "husky": "^6.0.0",
-    "inquirer": "^8.0.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "prisma": "^2.21.2",
+    "husky": "^7.0.4",
+    "inquirer": "^8.2.0",
+    "lint-staged": "^12.0.2",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.8",
-    "typescript": "^4.2.3"
+    "sass": "^1.43.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
