--- a/client/package.json
+++ b/client/package.json
@@ -19,39 +19,44 @@
   },
   "dependencies": {
     "@prisma/client": "^3.4.2",
+    "@radix-ui/react-avatar": "^0.1.3",
+    "@radix-ui/react-dialog": "^0.1.5",
+    "@radix-ui/react-slider": "^0.1.3",
     "axios": "^0.24.0",
-    "cypress": "^9.0.0",
+    "bad-words": "^3.0.4",
+    "classnames": "^2.3.1",
+    "daisyui": "^2.0.9",
     "lodash": "^4.17.21",
     "next": "^12.0.3",
-    "rc-slider": "^9.7.4",
     "react": "^17.0.2",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "3.2.11",
-    "react-toastify": "^8.1.0",
+    "react-toastify": "^8.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
+    "semantic-ui-react": "^2.1.2",
     "socket.io-client": "^4.3.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bad-words": "^3.0.1",
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
     "@types/react-canvas-draw": "^1.1.1",
-    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.27.0",
     "lint-staged": "^12.0.2",
+    "postcss": "^8.4.6",
     "prettier": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.43.5",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.4.4"
   }
 }
