--- a/server/example.env
+++ b/server/example.env
@@ -7,3 +7,5 @@ DB_USER=
 DB_PASS=
 
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+
+APP_HOSTNAME=some.hostname.com
