--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,8 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@prisma/client": "^3.4.2",
-    "@radix-ui/react-avatar": "^0.1.3",
-    "@radix-ui/react-dialog": "^0.1.5",
     "@radix-ui/react-slider": "^0.1.3",
     "axios": "^0.24.0",
     "bad-words": "^3.0.4",
