--- a/client/package.json
+++ b/client/package.json
@@ -18,38 +18,40 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@prisma/client": "^3.4.2",
-    "@radix-ui/react-slider": "^0.1.3",
-    "axios": "^0.24.0",
+    "@headlessui/react": "^1.6.3",
+    "@prisma/client": "^3.14.0",
+    "@radix-ui/react-slider": "^0.1.4",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
-    "daisyui": "^2.0.9",
+    "daisyui": "^2.15.1",
+    "framer-motion": "^6.3.4",
     "lodash": "^4.17.21",
-    "next": "^12.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-toastify": "^8.2.0",
-    "socket.io-client": "^4.3.2",
-    "uuid": "^8.3.2"
+    "react-toastify": "^9.0.1",
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-canvas-draw": "^1.1.1",
-    "@types/react-dom": "^17.0.11",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.27.0",
-    "lint-staged": "^12.0.2",
-    "postcss": "^8.4.6",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.4.4"
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.0",
+    "lint-staged": "^12.4.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.2"
   }
 }
