--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "scribble",
+  "name": "scribble-client",
   "author": "Victor Gorchilov",
   "private": true,
-  "license": "MIT",
+  "version": "0.0.1",
   "main": "build/index.js",
   "scripts": {
     "build": "swc src -d build",
@@ -20,27 +20,27 @@
     "exec": "yarn build && yarn start:dev"
   },
   "dependencies": {
-    "@prisma/client": "^3.4.2",
-    "axios": "^0.24.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/type-provider-json-schema-to-ts": "^2.1.1",
+    "@prisma/client": "^4.4.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.6.0",
+    "fastify-socket.io": "^4.0.0",
     "lodash": "^4.17.21",
-    "regenerator-runtime": "^0.13.9",
-    "socket.io": "^4.3.2",
-    "uuid": "^8.3.2"
+    "socket.io": "^4.5.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.52",
-    "@swc/core": "^1.2.113",
-    "@types/express": "^4.17.13",
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^16.11.7",
-    "@types/uuid": "^8.3.1",
-    "chokidar": "^3.5.2",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.4.1",
-    "prisma": "^3.4.2",
-    "typescript": "^4.4.4"
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.4",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.7.23",
+    "@types/uuid": "^8.3.4",
+    "chokidar": "^3.5.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "prisma": "^4.4.0",
+    "typescript": "^4.8.4"
   }
 }
