--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "scribble",
+  "name": "scribble-server",
   "author": "Victor Gorchilov",
   "private": true,
-  "license": "MIT",
+  "version": "0.0.1",
   "scripts": {
     "dev": "next",
     "start": "next start",
@@ -18,40 +18,39 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.3",
-    "@prisma/client": "^3.14.0",
-    "@radix-ui/react-slider": "^0.1.4",
+    "@headlessui/react": "^1.7.2",
+    "@radix-ui/react-slider": "^1.0.0",
     "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "daisyui": "^2.15.1",
-    "framer-motion": "^6.3.4",
+    "classnames": "^2.3.2",
+    "daisyui": "^2.31.0",
+    "framer-motion": "^7.5.1",
     "lodash": "^4.17.21",
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "react-toastify": "^9.0.1",
-    "socket.io-client": "^4.5.1",
-    "uuid": "^8.3.2",
-    "zustand": "^4.0.0-rc.1"
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8",
+    "socket.io-client": "^4.5.2",
+    "uuid": "^9.0.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.7.23",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.30.0",
-    "lint-staged": "^12.4.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.2"
+    "eslint-plugin-react": "^7.31.8",
+    "lint-staged": "^13.0.3",
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   }
 }
